--- a/static/css/_all.scss
+++ b/static/css/_all.scss
@@ -7,7 +7,7 @@ $blue_h2: #013236;
 $white: #ffffff;
 $red: #E80B8B;
 $footer_bg: #03646D;
-$footer_text:  #BBDFE3;
+$footer_text : #BBDFE3;
 $header_social: #055D65;
 $border_line: #DCDCDC;
 $background_cf: #FAF2F9;
@@ -15,11 +15,9 @@ $text_cf7: #898989;
 $text_cf7bottom: #1C3A2C;
 $white: #ffffff;
 $slick-arrows: #45A6AF;
-
-
+$slider_background: linear-gradient(180deg, #69C5CD 0%, #45A6AF 52.08%, #00616A 100%);
 $font_opensans: 'OpenSans';
-
-.container{
+.container {
     margin: 0 auto;
     max-width: 1200px;
 }
