--- a/static/css/style.css
+++ b/static/css/style.css
@@ -157,6 +157,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: 40px;
+  height: 35px;
 }
 .header_top .header_container .header_top_menu .menu_list .menu-item {
   margin-top: 12px;
@@ -180,7 +181,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 20px;
+  gap: 22px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -208,7 +209,7 @@ body {
 .header_middle .header_container .site_identification .logo_text-link {
   font-family: "OpenSans";
   font-style: normal;
-  font-weight: 700;
+  font-weight: 600;
   font-size: 21px;
   line-height: 29px;
   display: -webkit-box;
@@ -237,11 +238,12 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
-.header_middle .header_container .site_identification .header_phone-link, .header_middle .header_container .site_identification .visually_impaired-link {
+.header_middle .header_container .site_identification .header_phone-link,
+.header_middle .header_container .site_identification .visually_impaired-link {
   font-family: "OpenSans";
   font-style: normal;
   font-weight: 700;
-  font-size: 21px;
+  font-size: 20px;
   line-height: 29px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -251,6 +253,9 @@ body {
           align-items: center;
   text-transform: uppercase;
   color: #E80B8B;
+}
+.header_middle .header_container .site_identification .visually_impaired-link {
+  letter-spacing: -2px;
 }
 
 .header_bottom {
@@ -278,7 +283,7 @@ body {
 .header_bottom .header_container .header_bottom_menu .menu_list .menu-item span {
   font-family: "OpenSans";
   font-style: normal;
-  font-weight: 700;
+  font-weight: 600;
   font-size: 16px;
   line-height: 22px;
   display: -webkit-box;
@@ -369,6 +374,7 @@ body {
 
 .main_banner .banner {
   height: 481px;
+  margin-right: 10px;
 }
 .main_banner .banner img {
   width: 1200px;
@@ -391,11 +397,16 @@ body {
   -webkit-transform: translate(650px, -50%);
           transform: translate(650px, -50%);
 }
-.main_banner .slick-prev, .main_banner .slick-next {
+.main_banner .slick-prev,
+.main_banner .slick-next {
   color: white;
 }
 
-.departments, .news, .important_information, .gallery, .contacts {
+.departments,
+.news,
+.important_information,
+.gallery,
+.contacts {
   margin-top: 30px;
 }
 
@@ -593,8 +604,11 @@ body {
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 27px;
+  padding-bottom: 26px;
+}
+.news_container .news_body .news_posts .news_posts_items1 {
+  border-bottom: 1px solid #DCDCDC;
 }
 .news_container .news_buttom {
   margin-top: 24px;
@@ -666,6 +680,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  line-height: 24px;
 }
 .contacts_body .contacts_text .contacts_line1 {
   display: -webkit-box;
@@ -690,7 +705,7 @@ body {
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
-  color: #013236;
+  color: #055D65;
 }
 .contacts_body .contacts_text .contacts_line2 {
   display: -webkit-box;
@@ -715,7 +730,7 @@ body {
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
-  color: #013236;
+  color: #055D65;
 }
 .contacts_body .contacts_text .contacts_line3 {
   display: -webkit-box;
@@ -741,6 +756,7 @@ body {
   font-weight: 600;
   font-size: 18px;
   color: #055D65;
+  line-height: 24px;
 }
 .contacts_body .contacts_text .social {
   margin-top: 15px;
@@ -759,21 +775,51 @@ body {
 .contacts_body .contacts_form {
   background: #FAF2F9;
   border-radius: 20px;
-  min-width: 422px;
-  min-height: 498px;
+  width: 498px;
+  height: 422px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 14px;
+  margin-top: 32px;
 }
-.contacts_body .contacts_form .wpcf7 {
+.contacts_body .contacts_form .contact_form_title {
+  color: #E80B8B;
+  font-family: "Open Sans";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 33px;
+  margin-top: 5px;
+  margin-bottom: 22px;
+}
+.contacts_body .contacts_form .pers_data {
+  font-size: 12px;
+  color: #013236;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.contacts_body .contacts_form .pers_data a {
+  color: #013236;
+  text-decoration: underline;
+}
+.contacts_body input[name=privacy] {
+  width: 22px;
+  height: 22px;
+}
+.contacts_body .consent {
+  padding-left: 7px;
+}
+.contacts_body .consent p {
+  padding-top: 5px;
+}
+.contacts_body .wpcf7 {
   margin-top: 39px;
   margin-bottom: 39px;
 }
-.contacts_body .contacts_form .wpcf7 .wpcf7-form .text_cf7_bottom {
+.contacts_body .wpcf7 .wpcf7-form .text_cf7_bottom {
   font-family: "OpenSans";
   font-style: normal;
   font-weight: 400;
@@ -781,11 +827,11 @@ body {
   line-height: 16px;
   color: #1C3A2C;
 }
-.contacts_body .contacts_form .wpcf7 .wpcf7-form .text_cf7_bottom a {
+.contacts_body .wpcf7 .wpcf7-form .text_cf7_bottom a {
   color: #1C3A2C;
   text-decoration: underline;
 }
-.contacts_body .contacts_form .wpcf7 .wpcf7-form .wpcf7-submit {
+.contacts_body .wpcf7 .wpcf7-form .wpcf7-submit {
   margin-top: 36px;
   font-family: "OpenSans";
   font-style: normal;
@@ -795,16 +841,20 @@ body {
   font-family: "Inter";
   background: linear-gradient(40.37deg, #E80B8B 0%, #FF8ED0 100%);
   border-radius: 50px;
+  width: 203px;
+  height: 50px;
+  color: #ffffff;
+  border-color: transparent;
 }
-.contacts_body .contacts_form .wpcf7 .wpcf7-form .wpcf7-form-control-wrap .wpcf7-list-item {
+.contacts_body .wpcf7 .wpcf7-form .wpcf7-form-control-wrap .wpcf7-list-item {
   margin: 0;
 }
-.contacts_body .contacts_form .wpcf7 .wpcf7-form .wpcf7-form-control-wrap .wpcf7-list-item input {
+.contacts_body .wpcf7 .wpcf7-form .wpcf7-form-control-wrap .wpcf7-list-item input {
   -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
   border-radius: 2px;
 }
-.contacts_body .contacts_form .wpcf7 .wpcf7-form .wpcf7-form-control-wrap .wpcf7-text {
+.contacts_body .wpcf7 .wpcf7-form .wpcf7-form-control-wrap .wpcf7-text {
   -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
@@ -816,12 +866,176 @@ body {
   line-height: 20px;
   color: #898989;
   padding: 12px 0 13px 14px;
+  width: 418px;
+  border-color: transparent;
 }
-.contacts_body .contacts_form .cf7_title {
+.contacts_body .cf7_title {
   font-family: "OpenSans";
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
   color: #E80B8B;
   margin-bottom: 22px;
+}
+
+.logo_text {
+  width: 370px;
+}
+
+.site_identification {
+  height: 75px;
+}
+.site_identification .logo_img {
+  margin-right: 8px;
+}
+
+.site_identification .header_phone {
+  margin-left: 37.75px;
+}
+
+.site_identification .visually_impaired {
+  margin-left: 34px;
+}
+
+#menu-main-menu {
+  height: 55px;
+}
+
+.fanendoscope_img {
+  width: 22.75px;
+  height: 26px;
+  margin-top: 3px;
+}
+
+.departmens_body .hospital_items-link {
+  color: #055D65;
+}
+
+.other_office_items-link {
+  color: #055D65;
+  line-height: 22px;
+}
+
+.other_office_items_nav {
+  width: 398px;
+}
+
+.other_right_column,
+.hospital_left_column {
+  width: 488px;
+  padding-bottom: 28px;
+}
+
+.slick-dots li.slick-active button:before {
+  color: #E80B8B !important;
+  font-size: 12px;
+}
+
+.slick-dots li button:before {
+  font-size: 12px !important;
+}
+
+.slick-dots {
+  height: 7px;
+}
+
+.important_information .main_banner .banner {
+  height: 351px;
+  margin-right: 38.5px;
+}
+.important_information .main_banner .banner img {
+  width: 590px;
+  border-radius: 10px;
+}
+.important_information .main_banner .banner.slick-active {
+  width: 590px;
+}
+.important_information .main_banner .slick-prev {
+  display: none;
+}
+.important_information .main_banner .slick-next {
+  display: none;
+}
+
+.slider_background {
+  height: 481px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#69C5CD), color-stop(52.08%, #45A6AF), to(#00616A));
+  background: linear-gradient(180deg, #69C5CD 0%, #45A6AF 52.08%, #00616A 100%);
+  padding-top: 63px;
+}
+.slider_background .slider_wrapper {
+  width: 1920px;
+  margin: 0 auto;
+}
+.slider_background .slider_wrapper .slick-arrow {
+  display: none !important;
+}
+.slider_background .slick-dots li button:before {
+  top: 62px;
+}
+
+.news_posts_items li a {
+  color: #055D65;
+}
+.news_posts_items li a:hover {
+  /* Новый цвет при наведении */
+  color: #E80B8B;
+}
+
+.gallery .main_banner .banner {
+  height: 328px;
+  margin-right: 22px;
+}
+.gallery .main_banner .banner img {
+  width: 491px;
+  border-radius: 10px;
+}
+.gallery .main_banner .banner.slick-active {
+  width: 491px;
+}
+.gallery .main_banner .slick-prev {
+  display: none;
+}
+.gallery .main_banner .slick-next {
+  display: none;
+}
+.gallery .slider_background_gallery {
+  height: 470px;
+  background: #F2F9FA;
+  padding-top: 69px;
+}
+.gallery .slick-dots {
+  display: none !important;
+}
+.gallery .slick-arrow {
+  display: none !important;
+}
+.gallery .slider_wrapper {
+  width: 1920px;
+  margin: 0 auto;
+}
+
+.plus_img {
+  width: 13px;
+  height: 13px;
+  border-radius: 2px;
+}
+
+.contacts_posts_items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.contacts_posts_items li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contacts_posts_items-link {
+  padding-left: 6px;
 }/*# sourceMappingURL=style.css.map */
