--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1474,4 +1474,74 @@ body {
   padding: 13px 48px;
   color: #ffffff;
   max-width: 203px;
+}
+
+.page_reviews .page_reviews_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.page_reviews .page_reviews_container .reviews_title {
+  margin: 28px 0px;
+}
+.page_reviews .page_reviews_container .reviews_cf7 {
+  background: #FAF2F9;
+  border-radius: 20px;
+  max-width: 844px;
+  max-height: 422px;
+  margin-bottom: 32px;
+}
+.page_reviews .page_reviews_container .reviews_cf7 .contact_form_title {
+  margin: 39px 0 28px 0px;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #E80B8B;
+}
+.page_reviews .page_reviews_container .reviews_cf7 p {
+  background: #FAF2F9;
+  border-radius: 20px;
+  margin: 0 40px 16px 40px;
+  max-width: 764px;
+}
+.page_reviews .page_reviews_container .reviews_column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 28px;
+  margin-bottom: 32px;
+}
+.page_reviews .page_reviews_container .reviews_column .reviews_item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 14px;
+  border: 1px solid #BBDFE3;
+  border-radius: 10px;
+}
+.page_reviews .page_reviews_container .reviews_column .reviews_item .reviews_item_title {
+  margin: 27px 0 0 40px;
+}
+.page_reviews .page_reviews_container .reviews_column .reviews_item .reviews_item_text {
+  margin: 0 40px 26px 40px;
+  line-height: 25px;
 }/*# sourceMappingURL=style.css.map */
