--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1416,5 +1416,79 @@ body {
 //         }
 //     }
 // }
+// ----------------------Страница Отзывы-------------------
+
+.page_reviews {
+    .page_reviews_container {
+        display: flex;
+        flex-direction: column;
+        .reviews_title {
+            margin: 28px 0px;
+        }
+        .reviews_cf7 {
+            background: $background_cf;
+            border-radius: 20px;
+            max-width: 844px;
+            max-height: 422px;
+            margin-bottom: 32px;
+                    .contact_form_title {
+                        margin: 39px 0 28px 0px;
+                        font-family: 'Open Sans';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 35px;
+                        // line-height: 48px;
+                        display: flex;
+                        align-items: center;
+
+                        color: $red;
+                    }
+            p {
+                background: $background_cf;
+                border-radius: 20px;
+                margin: 0 40px 16px 40px;
+                // width: 100%;
+                max-width: 764px;
+            }
+        }
+        .reviews_column {
+            display: flex;
+            flex-direction: column;
+            gap: 28px;
+            margin-bottom: 32px;
+            .reviews_item {
+                display: flex;
+                flex-direction: column;
+                gap: 14px;
+                border: 1px solid $footer_text;
+                border-radius: 10px;
+                .reviews_item_title {
+                    margin: 27px 0 0 40px;
+                }
+                .reviews_item_text {
+                    margin: 0 40px 26px 40px;
+                    line-height: 25px;
+                }
+            }
+
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @import "adaptive";
